--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "^15.11.2",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
